--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
-  "start": "node dist/server/index.mjs",
+  "start": "node dist/server/index.ts",
 
 
     "test": "vitest --run",
